# serde_urlencoded_bytes

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/de/: encoding.rs  error.rs  mod.rs
src/ser/: encoding.rs  error.rs  keyval.rs  mod.rs  pair.rs
tests/: test_deserialize.rs  test_serialize.rs
