[package]
name = "serde_urlencoded_bytes"
version = "0.1.0"
edition = "2024"

authors = ["Samu698 <samu@cerea.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/samu698/serde_urlencoded_bytes"
readme = "README.md"

description = "`x-www-form-urlencoded` Serde format that supports arbitrary byte strings"
categories = [ "encoding", "web-programming" ]
keywords = ["serde", "serialization", "urlencoded", "form"]

include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/src/**",
    "/tests/**",
]

[dependencies]
itoa = "1.0.18"
ryu = "1.0.23"
serde = "1.0.228"

[dev-dependencies]
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
