[package]
name = "serde_urlencoded_bytes"
version = "0.1.0"
edition = "2024"
authors = ["Samu698 <samu@cerea.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/samu698/serde_urlencoded_bytes"
readme = "README.md"
description = "`x-www-form-urlencoded` Serde format that supports arbitrary byte strings"
categories = [ "encoding", "web-programming" ]
keywords = ["serde", "serialization", "urlencoded", "form"]

include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/src/**",
    "/tests/**",
]

[dependencies]
itoa = "1.0.18"
ryu = "1.0.23"
serde = "1.0.228"

[dev-dependencies]
serde_bytes = "0.11.19"
serde_derive = "1.0.228"

[lints.clippy]
# Cargo
wildcard_dependencies = "warn"
cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
dbg_macro = "warn"
exit = "warn"
expect_used = "warn"
undocumented_unsafe_blocks = "deny"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Pedantic
pedantic = { level = "warn", priority = -1 }
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
